examples/invalid/variables5.cp
var name : 34 is integer;